# mcp-check

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  SECURITY.md  SUPPORT.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  rule_request.md
.github/workflows/: publish.yml  test.yml
docs/: configuration.md  github-action.md  rules.md
examples/: suppressions.json
examples/safe/: pinned-local-server.json
examples/unsafe/: auto-approved-tools.json  docker-socket.json  git-main-install.json  header-secret.json  hidden-unicode-description.json  http-remote-server.json  leaked-secret.json  local-http-transport.json  oauth-broad-scope.json  oauth-token-query.json  private-network-url.json  prompt-injection-description.json  shell-command.json  ssh-path-mount.json  tls-verification-disabled.json  unpinned-npx.json  wildcard-bind.json  wildcard-origin.json
src/mcp_check/: __init__.py  baseline.py  capabilities.py  cli.py  models.py  parsers.py  presets.py  reporters.py  rule_catalog.py  scanner.py  suppressions.py
src/mcp_check/rules/: __init__.py  approval_bypass.py  command_execution.py  helpers.py  metadata_injection.py  network_access.py  oauth.py  package_provenance.py  runtime_privileges.py  secrets.py  sensitive_paths.py  ssrf.py  tls_security.py  transport_security.py
tests/: test_scanner.py
tests/fixtures/: mixed.json  safe-codex.toml  safe-vscode.json  safe.json  safe.toml  safe.yaml
