[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-check"
version = "0.1.0"
description = "Offline security checks for Model Context Protocol server configurations"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "mcp-check contributors" }]
keywords = ["mcp", "security", "ai", "developer-tools", "static-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.scripts]
mcp-check = "mcp_check.cli:main"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
