[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-check"
version = "0.5.0"
description = "Offline security checks for Model Context Protocol server configurations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6",
  "tomli>=2; python_version < '3.11'",
]
license = "MIT"
authors = [{ name = "mcp-check contributors" }]
keywords = ["mcp", "security", "ai", "developer-tools", "static-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/vigneshakaviki/mcp-check"
Repository = "https://github.com/vigneshakaviki/mcp-check"
Issues = "https://github.com/vigneshakaviki/mcp-check/issues"

[project.scripts]
mcp-check = "mcp_check.cli:main"

[project.optional-dependencies]
test = ["pytest>=9.1.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
